--- a/packages/public-beaches/package.json
+++ b/packages/public-beaches/package.json
@@ -14,7 +14,7 @@
     "directory": "packages/public-beaches"
   },
   "bin": {
-    "public-beaches": "dist/bin.js"
+    "public-beaches": "dist/index.js"
   },
   "files": [
     "dist",
