--- a/packages/open-api-umea/package.json
+++ b/packages/open-api-umea/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kodverk/public-beaches",
+  "name": "@kodverk/open-api-umea",
   "version": "0.2.0",
   "keywords": [
     "Umeå",
@@ -11,10 +11,10 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/kodverk/umea-open-api",
-    "directory": "packages/public-beaches"
+    "directory": "packages/open-api-umea"
   },
   "bin": {
-    "public-beaches": "dist/index.js"
+    "open-api-umea": "dist/index.js"
   },
   "files": [
     "dist",
