--- a/packages/open-api-umea/package.json
+++ b/packages/open-api-umea/package.json
@@ -1,6 +1,15 @@
 {
   "name": "@kodverk/open-api-umea",
   "version": "0.0.2",
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts"
+    },
+    "./package.json": "./package.json"
+  },
   "keywords": [
     "Umeå",
     "OpenAPI",
@@ -12,9 +21,6 @@
     "type": "git",
     "url": "https://github.com/kodverk/umea-open-api",
     "directory": "packages/open-api-umea"
-  },
-  "bin": {
-    "open-api-umea": "dist/index.js"
   },
   "files": [
     "dist",
