Co-authored-by: Viktor Malmedal <JohnVicke@users.noreply.github.com>
feat: added endpoint for public beaches.

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -5,6 +5,6 @@
   "access": "public",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
-  "fixed": [["@kodverk/open-api-umea"]],
+  "fixed": [["@kodverk/umea-open-api"]],
   "ignore": ["@kodverk/docs"]
 }
