--- a/packages/umea-open-api/package.json
+++ b/packages/umea-open-api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kodverk/open-api-umea",
+  "name": "@kodverk/umea-open-api",
   "version": "0.1.1",
   "type": "module",
   "main": "dist/index.js",
@@ -21,8 +21,8 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/kodverk/umea-open-api",
-    "directory": "packages/open-api-umea"
+    "url": "https://github.com/kodverk/open-api",
+    "directory": "packages/umea-open-api"
   },
   "files": [
     "dist",
