--- a/packages/umea-open-api/package.json
+++ b/packages/umea-open-api/package.json
@@ -40,6 +40,7 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "eslint": "^8.39.0",
     "tsup": "^6.7.0",
     "typescript": "^5.0.4"
