feat: create api wrapper for public beaches (#26)
* Co-authored-by: Viktor Malmedal <JohnVicke@users.noreply.github.com>

feat: added endpoint for public beaches.

* removed main function

* fix: remove smoke test

* misc: add faker js

* refactor: move umea open api to file

* feat: create custom fetch error

* misc: format

* misc: format

* feat: export types to user

* misc: format

* test: add tests for wrapper

* chore: add changeset

---------

Co-authored-by: arvidbt <arvid.bergman@sap.com>

--- a/packages/umea-open-api/package.json
+++ b/packages/umea-open-api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kodverk/open-api-umea",
+  "name": "@kodverk/umea-open-api",
   "version": "0.1.1",
   "type": "module",
   "main": "dist/index.js",
@@ -21,8 +21,8 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/kodverk/umea-open-api",
-    "directory": "packages/open-api-umea"
+    "url": "https://github.com/kodverk/open-api",
+    "directory": "packages/umea-open-api"
   },
   "files": [
     "dist",
@@ -40,6 +40,7 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "eslint": "^8.39.0",
     "tsup": "^6.7.0",
     "typescript": "^5.0.4"
