--- a/packages/umea-open-api/tsconfig.json
+++ b/packages/umea-open-api/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["*.ts", "src", "test"],
-  "exclude": ["dist"]
+  "compilerOptions": {
+    "noEmit": false
+  },
+  "include": ["src/**/*"],
+  "exclude": ["dist", "**/*.test.ts"]
 }
