--- a/packages/umea-open-api/tsconfig.json
+++ b/packages/umea-open-api/tsconfig.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "noEmit": false
   },
-  "include": ["src/**/*"],
-  "exclude": ["dist", "**/*.test.ts"]
+  "include": ["src/**/*", "tsup.config.ts"],
+  "exclude": ["dist"]
 }
