misc: format css

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint:fix": "turbo lint -- --fix && manypkg fix",
     "test": "turbo test",
     "typecheck": "turbo typecheck",
-    "format": "prettier --write \"**/*.{js,cjs,mjs,ts,tsx,md,json}\" --ignore-path .gitignore",
+    "format": "prettier --write \"**/*.{js,cjs,mjs,ts,tsx,md,json,css}\" --ignore-path .gitignore",
     "format:check": "prettier --check \"**/*.{js,cjs,mjs,ts,tsx,md,json,css}\" --ignore-path .gitignore"
   },
   "dependencies": {
