fix: update compiler options (#28)
* fix: update compiler options

* chore: add changeset

* remove console log

* fix: update config

--- a/packages/umea-open-api/tsconfig.json
+++ b/packages/umea-open-api/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["*.ts", "src", "test"],
+  "compilerOptions": {
+    "noEmit": false
+  },
+  "include": ["src/**/*", "tsup.config.ts"],
   "exclude": ["dist"]
 }
